--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="selected shadow rounded mt-2 bg-dark" id="active">
             <!-- Active Pokemon -->
           </div>
-          <div id="selected" class="d-flex flex-wrap">
+          <div id="selected" class="d-flex justify-content-between flex-wrap btm-scroll mt-2">
             <!-- Selected Pokemon -->
           </div>
         </div>
@@ -47,6 +47,10 @@
     </div>
   </footer>
 
+
+
+
+<!-- #region -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
     crossorigin="anonymous"></script>
@@ -54,6 +58,7 @@
     integrity="sha256-hw7v8jZF/rFEdx1ZHepT4D73AFTHLu/P9kEyrNesRyc=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.26.1/axios.min.js" integrity="sha512-bPh3uwgU5qEMipS/VOmRqynnMXGGSRv+72H/N260MQeXZIK4PG48401Bsby9Nq5P5fz7hy5UGNmC/W1Z51h2GQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="app/main.js" type="module"></script>
+  <!-- #endregion -->
 </body>
 
 </html>
